Test Org - Speridian/src/objects/Ba_SubGroup_Addr_Intersection__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>BA_Address__c</referenceTo>
        <relationshipLabel>Sub Group Addresses</relationshipLabel>
        <relationshipName>Sub_Group_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subgroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subgroup</label>
        <referenceTo>BA_Subgroup__c</referenceTo>
        <relationshipLabel>Sub Group Addresses</relationshipLabel>
        <relationshipName>Sub_Group_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Sub Group Address</label>
    <nameField>
        <label>Ba Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Group Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>